# pizza_test

./: .gitignore  .pdm-python  .pre-commit-config.yaml  README.md  package-lock.json  pyproject.toml
.github/workflows/: autotests.yml  ruff.yml  type_check.yml
src/pizza/: __init__.py  business.py  cli.py  constants.py  decorators.py  emoji.py  exceptions.py  main_pizza.py  pizza_menu.py  spinner.py
src/pizza.egg-info/: PKG-INFO  SOURCES.txt
tests/: __init__.py  help_funcs.py  test_business.py  test_cli.py  test_main.py
tests/match_output/: delivery.txt  menu.txt  pick_up.txt
