[project]
name = "pizza"
version = "0.1.0"
description = ""
authors = [
    {name = "Pavel", email = "60060559+pyrogn@users.noreply.github.com"},
]
dependencies = [
    "click>=8.1.7",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
pizza = "pizza.cli:cli"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.7.0",
    "isort>=5.12.0",
    "pre-commit>=3.4.0",
    "pytest>=7.4.1",
    "mypy>=1.5.1",
    "ruff>=0.0.287",
]

[tool.black]
line-length = 85
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
# Same as Black.
line-length = 85
src = ['src', 'tests']
select = ["E", "F", "C4", "COM", "D1", "UP", "PT", "SIM", "SLF001", "FBT"]
ignore = []
fixable = ["ALL"]

[tool.ruff.per-file-ignores]
# To access private attribute
"tests/**/*.py" = ["SLF001"]
